fix focus visible style on social icons

--- a/styles.css
+++ b/styles.css
@@ -308,6 +308,14 @@ body {
   gap: 1.75rem;
 }
 
+.social-icon-wrapper {
+  display: block;
+}
+
+.social-icon-wrapper:focus-visible {
+  outline-color: var(--clr-primary-700);
+}
+
 .social-icon {
   width: 1.25rem;
   height: 1.25rem;
